# cs2-demotracer

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
compatibility/: playback-contract.v1.json
converter/: Cargo.toml
converter/src/: api.rs  browser_analysis.rs  demo_id.rs  demo_reader.rs  demo_series.rs  export.rs  gui.rs  gui_main.rs  inspect_link.rs  lib.rs  main.rs  model.rs  nade_export.rs  nade_library.rs  pool.rs  quality.rs  rec_writer.rs  synthesis.rs  validate.rs  voice_export.rs
converter/src/analysis/: browser.rs  mod.rs  player_evidence.rs  quality.rs
converter/src/cli/: mod.rs  validate.rs
converter/src/demo_reader/: mod.rs
converter/src/export/: mod.rs
converter/src/model/: mod.rs
converter/src/nade/: api.rs  export.rs  library.rs  mod.rs
converter/src/rec_writer/: mod.rs
converter/src/replay/: context.rs  mod.rs  synthesis.rs
converter/src/ui/: gui.rs
converter/src/workflows/: mod.rs  pool.rs
converter/wasm/: Cargo.toml
converter/wasm/src/: lib.rs
css/: BotControllerNative.cs  BotMimicNative.cs  Cs2DemoBotMimic.csproj  Cs2DemoBotMimicPlugin.cs  DemoTracerCommandHelpers.cs  DemoTracerContact.cs  DemoTracerHandoff.cs  DemoTracerManifestReaders.cs  DemoTracerNadeCommands.cs  DemoTracerPlugin.cs  DemoTracerPool.cs  DemoTracerReplayTargets.cs  DemoTracerRoundPlan.cs  DemoTracerUtilityTrace.cs
css/DemoTracer/: BotControllerBinding.cs  BotControllerNativeTypes.cs  DemoTracer.csproj  DemoTracerApiFacade.cs  DemoTracerBotHiderBridge.cs  DemoTracerBotHiderPresentation.cs  DemoTracerChat.cs  DemoTracerCombat.cs  DemoTracerCommandAuthorization.cs  DemoTracerConfig.cs  DemoTracerCosmetics.cs  DemoTracerCrosshairApi.cs  DemoTracerCrosshairCode.cs  DemoTracerEconIndex.cs  DemoTracerInterop.cs  DemoTracerManifests.cs  DemoTracerMoment.cs  DemoTracerMusicKits.cs  DemoTracerNades.cs  DemoTracerPlayback.cs  DemoTracerPlugin.cs  DemoTracerPreset.cs  DemoTracerReplayPrefetch.cs  DemoTracerReplayRetention.cs  DemoTracerRoundBanner.cs  DemoTracerRuntimeHealth.cs  DemoTracerScoreboard.cs  DemoTracerUtilityTrace.cs  DemoTracerView.cs  DemoTracerVoice.cs  DemoTracerWeapons.cs  DtrReplayReader.cs  HudCrosshairOverrideService.cs  ReplayNativeMapper.cs  demotracer.config.example.json  skins_en.json
css/DemoTracer.Tests/: CommandPolicyTests.cs  DemoTracer.Tests.csproj  DtrReplayPrefetchTests.cs  DtrReplayReaderLimitsTests.cs  DtrRoundBannerPlaybackTests.cs  MusicKitAlignmentTests.cs  ReplayPresentationNameTests.cs  ReplayRetentionPriorityTests.cs  UtilityTracePathTests.cs
css/DemoTracerApi/: DemoTracerApi.csproj  IDemoTracerApi.cs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: check-crosshair.mjs  generate-cosmetic-catalog.mjs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: archive_info.rs  batch.rs  catalog.rs  diagnostics.rs  lib.rs  main.rs  server_config.rs  steam_profile.rs
docs/: COMMANDS.md  COMMANDS.zh-Hans.md  DEPENDENCIES.md  FORMAT.md  LIMITATIONS.md  LIMITATIONS.zh-Hans.md  README.md  README.zh-Hans.md  RELEASE_NOTES_0.3.3.md  RELEASE_NOTES_0.3.5.md  RELEASE_NOTES_0.3.6.md  USAGE.md  USAGE.zh-Hans.md  VOICE.md  VOICE.zh-Hans.md
runtime/BotController/: CMakeLists.txt  README.md
runtime/BotController/configs/addons/BotController/: gamedata.json
runtime/BotController/scripts/: BotController.NativeApi.cs
runtime/BotController/src/: plugin.cpp
runtime/BotController/src/BotController/: BotController.cpp  BotController.h
runtime/BotController/src/BotRecorder/: InputInjector.cpp  InputInjector.h  MotionRecorder.cpp  MotionRecorder.h  ReplaySubtickLayout.cpp  ReplaySubtickLayout.h
runtime/BotController/src/BuyController/: BuyController.cpp  BuyController.h  BuyControllerState.cpp
runtime/BotController/src/VoiceSender/: VoiceSender.cpp  VoiceSender.h
runtime/BotController/src/WeaponLocker/: WeaponLocker.cpp  WeaponLocker.h
runtime/BotController/src/common/: ccsbot_slot.cpp  ccsbot_slot.h  commands.cpp  commands.h  exports.cpp  hud_reticle_probe.cpp  hud_reticle_probe.h  platform.cpp  projectile_birth_align.cpp  projectile_birth_align.h  sig_scan.cpp  version_targets.cpp  version_targets.h
runtime/BotController/tests/: CMakeLists.txt  replay_load_abi_fuzz.cpp  replay_subtick_layout_tests.cpp  safe_read_tests.cpp
runtime/BotHider/: .gitignore  CMakeLists.txt  LICENSE  README.md  TECH.md  UPSTREAM.md  build.ps1
runtime/BotHider/cmake/: BotHider.vdf.in
runtime/BotHider/configs/addons/BotHider/: bot_info.example.json  gamedata.json  map_whitelist.json
runtime/BotHider/configs/addons/metamod/: BotHider.linux.vdf  BotHider.vdf
runtime/BotHider/csharp/BotHiderApi/: BotHiderApi.csproj  IBotHiderApi.cs
runtime/BotHider/csharp/BotHiderImpl/: BotHiderImpl.csproj  BotHiderImplPlugin.cs  BotHiderPresentationService.cs  IsBotPatch.cs  SharedMemoryClient.cs
runtime/BotHider/src/: bot_info.cpp  bot_info.h  fake_client_manager.cpp  fake_client_manager.h  personas.cpp  personas.h  ping_display.cpp  ping_display.h  plugin.cpp  plugin.h  schema_resolver.cpp  schema_resolver.h  serversideclient_ref.h  sig_scan.cpp  sig_scan.h  slot_publisher.cpp  slot_publisher.h  slot_shm.h  steamid_provider.cpp  steamid_provider.h  version_targets.h
runtime/BotMimicRuntime/: .gitignore  BotLocker.vdf  CMakeLists.txt  README.md  gamedata.json
runtime/BotMimicRuntime/scripts/: BotLocker.NativeApi.cs
runtime/BotMimicRuntime/src/: BotLocker.cpp  BotLocker.h  BotLockerState.cpp  BotLockerState.h  Cs2RecFile.cpp  Cs2RecFile.h  InputInjector.cpp  InputInjector.h  MotionRecorder.cpp  MotionRecorder.h  WeaponLocker.cpp  WeaponLocker.h  WeaponLockerState.cpp  WeaponLockerState.h  ccsbot_slot.cpp  ccsbot_slot.h  commands.cpp  commands.h  dispatch.cpp  dispatch.h  exports.cpp  playercommand.h  plugin.cpp  sig_scan.cpp  sig_scan.h  version_targets.h
scripts/: generate-demotracer-econ-index.ps1  package-converter.ps1  package-release.ps1  package-server.ps1
(+50 files in other folders)
