[package]
name = "cs2-demotracer"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[features]
default = ["cli", "demoparser"]
cli = ["dep:clap", "dep:dialoguer"]
demoparser = ["dep:ahash", "dep:parser"]

[lib]
name = "cs2_demotracer"
path = "src/lib.rs"

[[bin]]
name = "cs2-demotracer"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
ahash = { version = "0.8", optional = true, default-features = false, features = ["std", "no-rng"] }
brotli = "8.0.3"
clap = { version = "4.5", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }
rayon = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dependencies.parser]
path = "../third_party/demoparser/src/parser"
optional = true

[dev-dependencies]
tempfile = "3"
