[package]
name = "cs2-demotracer-wasm"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
cs2-demotracer = { path = "..", default-features = false, features = ["demoparser"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
