[package]
name = "cs2-demotracer-gui"
version = "0.6.0"
description = "Tauri desktop interface for CS2 DemoTracer"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[lib]
name = "cs2_demotracer_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cs2-demotracer-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
cs2-demotracer = { path = "../../converter", default-features = false, features = ["demoparser"] }
rfd = "=0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = [] }
